<resources>
    <string name="app_name">FindFood</string>

    <!--<string name="google_maps_api_key">AIzaSyCgLleMvDsfxXUUMT78WSXaL1PkILcCWzI</string>-->
    <string name="google_maps_api_key">AIzaSyBotPpDZ2bY5k05gul0jSmY5MLgRbyeQI8</string>

    <!-- String related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="barrett_consulting_logo">Barrett Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>

    <!-- Fragments Names -->
    <string name="fragment_map">Map</string>
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>
    <string name="current_gps_location">Current GPS Location</string>
    <string name="refresh">Refresh</string>
    <string name="unable_to_detect_location">Unable to Detect Current Location</string>
    <string name="chatrooms">Chatrooms</string>
    <string name="new_message">new message…</string>
    <string name="chatroom_name">Chatroom name</string>
    <string name="choose_an_avatar">Choose an avatar</string>

</resources>
